[gd_scene load_steps=16 format=2]

[ext_resource path="res://others/bullet/BulletAutoAim.gd" type="Script" id=1]
[ext_resource path="res://others/explosion/ex_1.png" type="Texture" id=2]
[ext_resource path="res://others/explosion/ex_6.png" type="Texture" id=3]
[ext_resource path="res://others/explosion/ex_5.png" type="Texture" id=4]
[ext_resource path="res://others/explosion/ex_3.png" type="Texture" id=5]
[ext_resource path="res://others/explosion/ex_7.png" type="Texture" id=6]
[ext_resource path="res://others/explosion/ex_4.png" type="Texture" id=7]
[ext_resource path="res://others/explosion/ex_2.png" type="Texture" id=8]
[ext_resource path="res://others/bullet/bullet-1.png" type="Texture" id=9]
[ext_resource path="res://others/bullet/bullet-2.png" type="Texture" id=10]
[ext_resource path="res://audio/sound-effects/explosion-6.wav" type="AudioStream" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 16.0

[sub_resource type="Animation" id=2]
resource_name = "Default"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Explosion"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.117188, 0.117188 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="BulletAutoAim" type="Area2D" groups=["bullet-autoaim"]]
collision_layer = 32
collision_mask = 26
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2, 0 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2, 2.38419e-07 )
scale = Vector2( 1.3, 0.5 )

[node name="AnimationBullet" type="AnimationPlayer" parent="."]
anims/Default = SubResource( 2 )
anims/Explosion = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="aim_area" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="aim_area"]
polygon = PoolVector2Array( 15, -5, 567, -438, 561, 454, 15, 5 )

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "SoundEffects"

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="AnimationBullet" to="." method="_on_AnimationBullet_animation_finished"]
[connection signal="body_entered" from="aim_area" to="." method="_on_aim_area_body_entered"]
